[package]
name = "ethereum_wallet"
version = "0.1.0"
edition = "2018"


[dependencies]
tiny-bip39 = "1.0.0"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
base58 = "0.1.0"
secp256k1 = "0.29.0"
keccak-hash = "0.1.0"
bip32 = "0.3.0"
rayon = "1.10.0"
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
syn = { version = "1.0", features = ["full"] }








